<resources>
    <string name="app_name">LoginValidation</string>
    <string name="please_wait">Please wait…</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="sign_up">Sign up</string>
    <string name="please_sign_in_to_continue">Please Sign in to continue</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_dashboard">Welcome to Dashboard</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile Image</string>
    <string name="profile_title">Profile Title</string>
    <string name="popularity">Popularity</string>
    <string name="like">Like</string>
    <string name="followers">Followers</string>

</resources>